# OpenCV_computer_vision_applications

Basics_of_OpenCV/Reading_writing_images/: main.cpp
Reading_videos_and_cameras/: main.cpp
Reading_writing_images/: CMakeLists.txt
Writing_to_FileStorage/: main.cpp
